[gd_scene load_steps=11 format=3 uid="uid://dfn5dw3q3b5hp"]

[ext_resource type="Script" path="res://table/table.gd" id="1_krf1e"]
[ext_resource type="PackedScene" uid="uid://bo666p0hi6ao4" path="res://table/opponent.tscn" id="2_3av41"]
[ext_resource type="Texture2D" uid="uid://mt5xy7snaqs4" path="res://resources/table/table_bg.png" id="3_aj22k"]
[ext_resource type="PackedScene" uid="uid://cipkeb6hjsgkf" path="res://table/pot.tscn" id="4_721qg"]
[ext_resource type="PackedScene" uid="uid://dlprm8me7eowj" path="res://table/community_cards.tscn" id="5_ylukq"]
[ext_resource type="PackedScene" uid="uid://svr8ru7hvllj" path="res://table/table_button.tscn" id="6_x3dvf"]
[ext_resource type="PackedScene" uid="uid://b3edga7bj8n12" path="res://table/player.tscn" id="7_283aj"]
[ext_resource type="FontFile" uid="uid://c3j6oa1sotgmy" path="res://resources/monogram.ttf" id="8_r7uli"]
[ext_resource type="Texture2D" uid="uid://451j0kfjcdse" path="res://resources/table/help.png" id="9_n7spv"]

[sub_resource type="LabelSettings" id="LabelSettings_q3uhq"]
font = ExtResource("8_r7uli")

[node name="Table" type="Node"]
script = ExtResource("1_krf1e")
opponent_scene = ExtResource("2_3av41")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_aj22k")
metadata/_edit_lock_ = true

[node name="Pot" parent="." instance=ExtResource("4_721qg")]
position = Vector2(335, 195)

[node name="CommunityCards" parent="." instance=ExtResource("5_ylukq")]
position = Vector2(297, 244)

[node name="TableButton1" parent="." instance=ExtResource("6_x3dvf")]
offset_left = 30.0
offset_top = 638.0
offset_right = 238.0
offset_bottom = 696.0

[node name="TableButton2" parent="." instance=ExtResource("6_x3dvf")]
offset_left = 269.0
offset_top = 638.0
offset_right = 477.0
offset_bottom = 696.0

[node name="Player" parent="." instance=ExtResource("7_283aj")]
position = Vector2(506, 434)

[node name="TableButton3" parent="." instance=ExtResource("6_x3dvf")]
offset_left = 803.0
offset_top = 638.0
offset_right = 1011.0
offset_bottom = 696.0

[node name="TableButton4" parent="." instance=ExtResource("6_x3dvf")]
offset_left = 1042.0
offset_top = 638.0
offset_right = 1250.0
offset_bottom = 696.0

[node name="VersionLabel" type="Label" parent="."]
offset_left = 4.0
offset_right = 7804.0
offset_bottom = 636.0
text = "Pixel Poker v0.0.1"
label_settings = SubResource("LabelSettings_q3uhq")

[node name="HelpButton" type="TextureButton" parent="."]
modulate = Color(0.372549, 0.372549, 0.372549, 1)
offset_left = 1208.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 72.0
texture_normal = ExtResource("9_n7spv")

[connection signal="mouse_entered" from="HelpButton" to="." method="_on_help_button_mouse_entered"]
[connection signal="mouse_exited" from="HelpButton" to="." method="_on_help_button_mouse_exited"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
